kubernetesor/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: my-k8s-grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
              hostPort: 3000
