kubernetesor/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: grafana.ingress.k8s.ariman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana-service
              servicePort: 3000
